fix bleeding image section

--- a/ui.frontend/src/components/PageSection/variants/hl-page-section--bleeding-image.scss
+++ b/ui.frontend/src/components/PageSection/variants/hl-page-section--bleeding-image.scss
@@ -50,8 +50,6 @@
     }
 
     @include abstracts.media-breakpoint-only(md) {
-      width: auto;
-
       img {
         width: 100%;
       }
